src/styles/components/Footer.module.css
.footerContainer {
  background-color: #111;
  margin-top: 2rem;
}

.footerGradient {
  height: 4px;
  width: 100%;

  background-color: #21d4fd;
  background-image: linear-gradient(90deg, #21d4fd 0%, #b721ff 100%);
}

.footerContentContainer {
  padding: 2rem;
  display: flex;
  align-items: center;
  justify-content: space-evenly;
}

.footerContentContainer > span {
  display: flex;
  align-items: center;
  justify-content: center;
}

.footerContentContainer > span > svg {
  height: 1.2rem;
  width: 1.2rem;
  margin-right: 0.5rem;
}

